# EC327-Boids

./: .gitignore  Boids.cpp  Boids.h  CMakeLists.txt  Flock.h  Point2D.h  Predator.cpp  README.md  imgui.ini  main.cpp  readme.txt  run.sh  test_file.cpp
.github/workflows/: release.yml
shaders/: AtmosphereFragmentShader.glsl  AtmosphereVertexShader.glsl  BoidFragmentShader.glsl  BoidVertexShader.glsl  EarthFragmentShader.glsl  EarthVertexShader.glsl  FragmentShader.glsl  Shader.cpp  Shader.h  StarFragmentShader.glsl  StarVertexShader.glsl  VertexShader.glsl
src/: Application.cpp  Application.h  BoidGenTemp.cpp  BoidGenTemp.h  PathResolver.cpp  PathResolver.h  main.cpp
src/behavior/: BoidRenderer.cpp  Boids.cpp  Boids.h  Flock.cpp  Flock.h  Friendly.cpp  Friendly.h  Point2D.cpp  Point2D.h  Predator.cpp  Predator.h
src/visual/: BoidRenderer.cpp  BoidRenderer.h  Callbacks.cpp  Callbacks.h  Camera.cpp  Camera.h  CelestialBody.cpp  CelestialBody.h  Earth.cpp  GraphicsEngine.cpp  GraphicsEngine.h  Star.cpp  Star.h  TextureLoader.cpp  TextureLoader.h  UIManager.cpp  UIManager.h  UIThemes.h  Window.cpp
visual/: BoidRenderer.h  Callbacks.h  Earth.h  Window.h
